--- a/Sources/RichTextKit/Resources/en.lproj/Localizable.strings
+++ b/Sources/RichTextKit/Resources/en.lproj/Localizable.strings
@@ -54,6 +54,8 @@
 "styleStrikethrough" = "Strikethrough";
 "styleUnderlined" = "Underline";
 
+"setLink" = "Set link";
+
 "textAlignment" = "Text Alignment";
 "textAlignmentLeft" = "Left";
 "textAlignmentRight" = "Right";
